<resources>
    <string name="app_name">Conzumex Assignment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_search_activity">Search Activity ...</string>
    <string name="hint_start_time">START TIME</string>
    <string name="hint_duration">DURATION</string>
    <string name="hint_distance">DISTANCE</string>
    <string name="text_intensity">INTENSITY</string>
    <string name="text_high">HIGH</string>
    <string name="text_mid">MID</string>
    <string name="text_low">LOW</string>
    <string name="text_card_info">Please log your activity 0x1F3C3  details in the card below:</string>


    <string-array name="tennis_array">
        <item>singles</item>
        <item>doubles</item>
    </string-array>
</resources>
